<resources>
    <string name="app_name">Story App</string>

    <string name="welcome_register">Register</string>
    <string name="welcome_login">Login</string>
    <string name="desc">Share your daily stories here</string>
    <string name="copyright">©2023 Diva Ariani</string>
    <string name="name_cannot_be_empty">Name can not be empty</string>
    <string name="email_cannot_be_empty">Email can not be empty</string>
    <string name="invalid_email_address">Email address incorrect</string>
    <string name="password_cannot_be_empty">Password can not be empty</string>
    <string name="password_less_than_8_char">Password must have 8 characters</string>

    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="dont_have_an_account">Do not have an account?</string>
    <string name="logout">Logout</string>

    <string name="add">Add Story</string>
    <string name="image_story">Image</string>
    <string name="title_story">Title</string>
    <string name="desc_story">Desccription</string>
    <string name="date_story">Date</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="description">Description</string>
    <string name="upload">Upload</string>
    <string name="add_story">Add Story</string>

    <string name="title_activity_maps">Maps</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
</resources>