<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="5dp"
        app:cardElevation="10dp"
        app:cardPreventCornerOverlap="false">

        <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_item_photo"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="275dp"
                tools:srcCompat="@tools:sample/backgrounds/scenic"
                tools:ignore="MissingConstraints"/>

            <TextView
                android:id="@+id/tv_item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:paddingStart="10dp"
                app:layout_constraintTop_toBottomOf="@+id/iv_item_photo"
                tools:text="@string/title_story"
                tools:ignore="MissingConstraints"/>

            <TextView
                android:id="@+id/tv_item_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:paddingStart="10dp"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/tv_item_name"
                tools:text="@string/description"
                tools:ignore="MissingConstraints"/>

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/date_story"
                android:textSize="10sp"
                android:textColor="@color/black"
                android:paddingStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="end"
                app:layout_constraintTop_toBottomOf="@+id/tv_item_description"
                tools:ignore="MissingConstraints" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>